@@ -1,3 +1,9 @@
+2003-09-04	Joel Sherrill <joel@OARcorp.com>
+
+	* include/bsp.h, include/registers.h, irq/bsp_irq_asm.S,
+	irq/bsp_irq_init.c, irq/irq.c, irq/irq.h, start/start.S,
+	startup/bspstart.c, startup/exit.c: URL for license changed.
+
 2003-08-22	Joel Sherrill <joel@OARcorp.com>
 
 	PR 445/bsps
